--- a/static/css/main-minimal.css
+++ b/static/css/main-minimal.css
@@ -8,6 +8,6 @@ footer.footer-min {
   width: 100%;
   padding: 3px;
   background-color: #f5f5f5;
-  border-top: 1px solid #eeeeee;
+  border: none;
   text-align: center;
 }
