--- a/layouts/partials/post_preview.html
+++ b/layouts/partials/post_preview.html
@@ -1,10 +1,10 @@
 <article class="post-preview">
     <a href="{{ .Permalink }}">
-        <h2 class="post-title">{{ .Title }}</h2>
+        <h4>{{ .Title }}</h4>
         {{ if .Params.subtitle }}
-        <h3 class="post-subtitle">
+        <h4 class="post-subtitle">
             {{ .Params.subtitle }}
-        </h3>
+        </h4>
         {{ end }}
         {{ if .Params.image }}
         <img src="{{ .Params.image }}" alt="{{ .Title }}" class="img-title" />
