--- a/layouts/partials/index_header.html
+++ b/layouts/partials/index_header.html
@@ -1,48 +1,28 @@
 {{- partial "load-photoswipe-theme.html" . }}
 
-{{ if .Site.Params.homeTitle }}{{ $.Scratch.Set "title" .Site.Params.homeTitle }}{{ else }}{{ $.Scratch.Set "title" .Site.Title }}{{ end }}
-{{ if .Site.Params.subtitle }}{{ $.Scratch.Set "subtitle" .Site.Params.subtitle }}{{ end }}
-{{ if .Site.Params.bigimg }}{{ $.Scratch.Set "bigimg" .Site.Params.bigimg }}{{ end }}
-{{ $bigimg := $.Scratch.Get "bigimg" }}
-{{ $title := $.Scratch.Get "title" }}
-{{ $subtitle := $.Scratch.Get "subtitle" }}
+{{ if .Site.Params.bigimg }}
+  {{ $firstimg := index .Site.Params.bigimg 0 }}
+  <header class="header-section has-img" style="height: 100vh;">
+    <div class="intro-header big-img">
+      <!-- Background Image with CSS Rotation for Smaller Screens -->
+      <style>
+        .intro-header.big-img {
+          background-image: url('{{$firstimg.src | absURL}}');
+          background-size: cover;
+          background-position: center;
+          height: auto;
+        }
 
-{{ if or $bigimg $title }}
-  {{ if $bigimg }}
-    <div id="header-big-imgs" data-num-img={{len $bigimg}}
-      {{range $i, $img := $bigimg}}
-         {{ if (fileExists $img.src)}}
-          data-img-src-{{add $i 1}}="{{$img.src | absURL }}"
-         {{else}}
-          data-img-src-{{add $i 1}}="{{$img.src}}"
-         {{end}}
-         {{ if $img.desc}}data-img-desc-{{add $i 1}}="{{$img.desc}}"{{end}}
-      {{end}}></div>
-  {{ end }}
+      </style>
 
-  <header class="header-section {{ if $bigimg }}has-img{{ end }}">
-    {{ if $bigimg }}
-      {{ $firstimg := index $bigimg 0 }}
-      <div class="intro-header big-img" style="background-image: url('{{$firstimg.src}}');">
-        {{ $subtitle := $.Scratch.Get "subtitle" }}
-        <div class="container" style="color: white">
-          <div class="row">
-            <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                {{ with $.Scratch.Get "title" }}<h1>{{.}}</h1>{{ end }} 
-                {{ if $subtitle }}
-                    {{ if eq .Type "page" }}
-                      <hr class="small">
-                      <span class="{{ .Type }}-subheading">{{ $subtitle }}</span>
-                    {{ else }}
-                      <h2 class="{{ .Type }}-subheading">{{ $subtitle }}</h2>
-                    {{ end }}
-                  {{ end }}
-                  {{ partial "aboutme.html" . }}
-            </div>
+      <!-- About Me Section -->
+      <div class="container" style="color: white; padding-top: 40px; padding-bottom: 20px">
+        <div class="row">
+          <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+            {{ partial "aboutme.html" . }}
           </div>
         </div>
-        <span class="img-desc" style="display: {{ cond (isset $firstimg "desc") "inline" "none"}};">{{$firstimg.desc}}</span>
       </div>
-    {{end}}
+    </div>
   </header>
 {{ end }}
